<resources>
    <string name="app_name">second-task-coffee-shop</string>
    <string name="coffee_image_description">sussy baka</string>
    <string name="onboarding_title">fall in Love with coffee in blissful delight!</string>
    <string name="onboarding_subtext">welcome to our cozy coffee corner, where every cup is gud for you</string>
    <string name="onboarding_get_started">get started</string>
    <string name="Detail">Detail</string>
    <string name="Caffe_Mocha">caffe mocha</string>
    <string name="problem">there was a problem downloading these 3 icons (on top) from figma, i tried everything</string>
    <string name="ice">ice/hot</string>
</resources>