<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F8F8F8"
    tools:context=".DetailItemActivity">

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toTopOf="@+id/bottom_container"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/back_button"
                android:layout_width="34dp"
                android:layout_height="44dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="44dp"
                android:contentDescription="@string/coffee_image_description"
                android:src="@drawable/icon_chevron_left"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/detail_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Detail"
                android:textColor="@android:color/black"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/back_button"
                app:layout_constraintEnd_toStartOf="@+id/heart_button"
                app:layout_constraintStart_toEndOf="@+id/back_button"
                app:layout_constraintTop_toTopOf="@+id/back_button" />

            <ImageView
                android:id="@+id/heart_button"
                android:layout_width="44dp"
                android:layout_height="34dp"
                android:layout_marginEnd="24dp"
                android:contentDescription="@string/coffee_image_description"
                android:src="@drawable/icon_heart"
                app:layout_constraintBottom_toBottomOf="@+id/detail_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/detail_title" />

            <androidx.cardview.widget.CardView
                android:id="@+id/coffee_image_card"
                android:layout_width="0dp"
                android:layout_height="250dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="24dp"
                app:cardCornerRadius="16dp"
                app:cardElevation="4dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/detail_title">

                <ImageView
                    android:id="@+id/coffee_image"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/coffee_image_description"
                    android:scaleType="centerCrop"
                    tools:src="@drawable/detail_item_coffee" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/coffee_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/Caffe_Mocha"
                android:textColor="@android:color/black"
                android:textSize="26sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/coffee_image_card"
                app:layout_constraintTop_toBottomOf="@+id/coffee_image_card" />

            <TextView
                android:id="@+id/coffee_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ice"
                android:textColor="@android:color/darker_gray"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="@+id/coffee_name"
                app:layout_constraintTop_toBottomOf="@+id/coffee_name" />

            <ImageView
                android:id="@+id/star_icon"
                android:layout_width="26dp"
                android:layout_height="26dp"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/coffee_image_description"
                android:src="@drawable/icon_star"
                app:layout_constraintStart_toStartOf="@+id/coffee_type"
                app:layout_constraintTop_toBottomOf="@+id/coffee_type" />

            <TextView
                android:id="@+id/rating_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="4.8"
                android:textColor="@android:color/black"
                android:textSize="22sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/star_icon"
                app:layout_constraintStart_toEndOf="@+id/star_icon"
                app:layout_constraintTop_toTopOf="@+id/star_icon" />

            <TextView
                android:id="@+id/review_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="(230)"
                android:textSize="18sp"
                android:textColor="@android:color/darker_gray"
                app:layout_constraintBottom_toBottomOf="@+id/rating_text"
                app:layout_constraintStart_toEndOf="@+id/rating_text" />

            <LinearLayout
                android:id="@+id/icon_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="@+id/review_count"
                app:layout_constraintEnd_toEndOf="@+id/coffee_image_card"
                app:layout_constraintTop_toTopOf="@+id/coffee_name">

                <androidx.cardview.widget.CardView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginEnd="8dp"
                    app:cardBackgroundColor="#eeeeee"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="0dp">

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_gravity="center"
                        android:contentDescription="@string/coffee_image_description"
                        android:src="@drawable/icon_moped" />
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginEnd="8dp"
                    app:cardBackgroundColor="#eeeeee"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="0dp">

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_gravity="center"
                        android:contentDescription="@string/coffee_image_description"
                        android:src="@drawable/icon_coffee" />
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    app:cardBackgroundColor="#eeeeee"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="0dp">

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_gravity="center"
                        android:contentDescription="@string/coffee_image_description"
                        android:src="@drawable/icon_coffee_bag" />
                </androidx.cardview.widget.CardView>
            </LinearLayout>

            <View
                android:id="@+id/divider"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginStart="40dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="40dp"
                android:background="@android:color/darker_gray"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/star_icon" />

            <TextView
                android:id="@+id/description_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:text="description"
                android:textColor="@android:color/black"
                android:textSize="22sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/star_icon"
                app:layout_constraintTop_toBottomOf="@+id/divider" />

            <TextView
                android:id="@+id/description_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/problem"
                android:textColor="@android:color/darker_gray"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="@+id/icon_group"
                app:layout_constraintStart_toStartOf="@+id/description_title"
                app:layout_constraintTop_toBottomOf="@+id/description_title" />

            <TextView
                android:id="@+id/size_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="Size"
                android:textColor="@android:color/black"
                android:textSize="22sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/description_text"
                app:layout_constraintTop_toBottomOf="@+id/description_text" />

            <LinearLayout
                android:id="@+id/size_buttons"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="24dp"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/description_text"
                app:layout_constraintStart_toStartOf="@+id/size_title"
                app:layout_constraintTop_toBottomOf="@+id/size_title">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/size_s"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/size_button_unselected"
                    android:text="S"
                    android:textSize="17sp"
                    android:textColor="@android:color/black" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/size_m"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_weight="1"
                    android:background="@drawable/size_button_selected"
                    android:text="M"
                    android:textSize="17sp"
                    android:textColor="#C67C4E" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/size_l"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/size_button_unselected"
                    android:text="L"
                    android:textSize="17sp"
                    android:textColor="@android:color/black" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bottom_container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/bottom_bar_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/price_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="28dp"
            android:text="Price"
            android:textColor="@android:color/darker_gray"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/price_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="36dp"
            android:text="$ 4.53"
            android:textColor="#C67C4E"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/price_label"
            app:layout_constraintTop_toBottomOf="@+id/price_label" />

        <Button
            android:id="@+id/buy_now_button"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:backgroundTint="#C67C4E"
            android:text="Buy Now"
            android:textAllCaps="false"
            android:textSize="18sp"
            app:cornerRadius="16dp"
            app:layout_constraintBottom_toBottomOf="@+id/price_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/price_text"
            app:layout_constraintTop_toTopOf="@+id/price_label" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
